# CrabShrimp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  TUTORIAL_CN.md  crabshrimp_架构机制说明.md  pyproject.toml
crabshrimp/: __init__.py  __main__.py  config.py
crabshrimp/agents/: __init__.py  base.py  factory.py  registry.py
crabshrimp/agents/roles/: critic.py  executor.py  planner.py  summarizer.py  verifier.py
crabshrimp/cli/: commands.py
crabshrimp/communication/: __init__.py  blackboard.py  p2p.py
crabshrimp/coral_meeting/: __init__.py  meeting.py
crabshrimp/db/: __init__.py  agent_repo.py  connection.py  meeting_repo.py  optimization_repo.py  role_weight_repo.py  skill_repo.py  task_repo.py
crabshrimp/display/: __init__.py  rich_panel.py
crabshrimp/dragon_king/: __init__.py  classifier.py  orchestrator.py  planner.py
crabshrimp/evolution/: __init__.py  skill_extractor.py
crabshrimp/llm/: __init__.py  base.py  litellm_client.py
crabshrimp/models/: __init__.py  agent_profile.py  message.py  trace.py
crabshrimp/optimizer/: __init__.py  optimizer_agent.py
crabshrimp/runtime/: runner.py
crabshrimp/tidal_pool/: __init__.py  human_gate.py  resource_guard.py  sandbox.py  shell_molting.py  workspace.py
crabshrimp/trace/: __init__.py  collector.py  writer.py
docs/: index.html
tests/: test_hitl.py  test_isolation.py  test_models.py  test_optimizer.py  test_orchestrator.py  test_persistence.py  test_resource_guard.py  test_shell_molting.py  test_skills.py  test_trace_runtime.py  test_verifier.py
(+5 files in other folders)
