[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crabshrimp"
version = "0.4.0"
description = "Multi-agent runtime with collaborative decision-making and autonomous evolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "litellm>=1.70.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
crabshrimp = "crabshrimp.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["crabshrimp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
